crates/parser/src/snapshots/parser__tests__parse_inline_ok@0078_domain_complex_sort.ath.snap
---
source: crates/parser/src/tests.rs
description: "domain (List T)\n"
input_file: crates/parser/test_data/parser/inline/ok/dir/0078_domain_complex_sort.ath
---
DOMAIN_DIR
  DOMAIN_KW "domain"
  WHITESPACE " "
  COMPOUND_SORT_DECL
    L_PAREN "("
    IDENT_SORT
      IDENTIFIER
        IDENT "List"
    WHITESPACE " "
    IDENT_SORT
      IDENTIFIER
        IDENT "T"
    R_PAREN ")"
  WHITESPACE "\n"

