crates/parser/src/snapshots/parser__tests__parse_inline_ok@0079_domain_directive.ath.snap
---
source: crates/parser/src/tests.rs
description: "domain Bar\n"
input_file: crates/parser/test_data/parser/inline/ok/dir/0079_domain_directive.ath
---
DOMAIN_DIR
  DOMAIN_KW "domain"
  WHITESPACE " "
  IDENT_SORT
    IDENTIFIER
      IDENT "Bar"
  WHITESPACE "\n"

