crates/parser/src/snapshots/parser__tests__parse_inline_ok@0084_phrase_stmt.ath.snap
---
source: crates/parser/src/tests.rs
description: "(!claim A)\n"
input_file: crates/parser/test_data/parser/inline/ok/stmt/0084_phrase_stmt.ath
---
BANG_METHOD_CALL_DED
  L_PAREN "("
  BANG "!"
  IDENT_EXPR
    NAME_REF
      IDENT "claim"
  WHITESPACE " "
  IDENT_EXPR
    NAME_REF
      IDENT "A"
  R_PAREN ")"
  WHITESPACE "\n"

