crates/parser/src/snapshots/parser__tests__parse_inline_ok@0085_dir_stmt.ath.snap
---
source: crates/parser/src/tests.rs
description: "domain Foo\n"
input_file: crates/parser/test_data/parser/inline/ok/stmt/0085_dir_stmt.ath
---
DIR_STMT
  DOMAIN_DIR
    DOMAIN_KW "domain"
    WHITESPACE " "
    IDENT_SORT_DECL
      NAME
        IDENT "Foo"
  WHITESPACE "\n"

