crates/parser/src/snapshots/parser__tests__parse_inline_ok@0086_declare_directive.ath.snap
---
source: crates/parser/src/tests.rs
description: "declare foo : [Int] -> Int\n"
input_file: crates/parser/test_data/parser/inline/ok/dir/0086_declare_directive.ath
---
DECLARE_DIR
  DECLARE_KW "declare"
  WHITESPACE " "
  IDENTIFIER
    IDENT "foo"
    WHITESPACE " "
  COLON ":"
  WHITESPACE " "
  FUNC_SORTS
    L_BRACK "["
    IDENT_SORT
      IDENTIFIER
        IDENT "Int"
    R_BRACK "]"
    WHITESPACE " "
  THIN_ARROW "->"
  WHITESPACE " "
  IDENT_SORT
    IDENTIFIER
      IDENT "Int"
      WHITESPACE "\n"

